# frinZrs

./: Cargo.toml  README.md
data/: YAMAGU32_HITACH32_2023262102100_x.cor  YAMAGU32_YAMAGU34_2023262102100_x.cor
frinZmain/: main.rs  maser.rs  multisideband.rs  output.rs  plot.rs  raw_visibility.rs  uptimeplot.rs
src/: analysis.rs  args.rs  calc.rs  error.rs  fft.rs  fitting.rs  logo.rs  main.rs  main.rs.bak  output.rs  plot.rs  read.rs  rfi.rs  utils.rs
src/bandscythe/: main.rs
src/cormerge/: main.rs
src/corshow/: main.rs
src/frinZmain/: acel_search.rs  analysis.rs  args.rs  bandpass.rs  bispectrum.rs  closure_phase.rs  command_detail.txt  deep_search.rs  earth_rotation_imaging.rs  error.rs  fft.rs  fitting.rs  folding.rs  fringe_rate_map.rs  frmap.rs  header.rs  imaging.rs  inbeamVLBI.rs  input_support.rs  lib.rs  logo.rs  main.rs  maser.rs  multisideband.rs  output.rs  phase_reference.rs  phsref.rs  plot.rs  plot_msb.rs  png_compress.rs  pre_check.rs  processing.rs  raw_visibility.rs  read.rs  rfi.rs  scan_correct.rs  search.rs  single_file.rs  uptimeplot.rs  utils.rs  (+1 more)
src/gfrinZmain/: example.rs  global_ls.rs  main.rs
src/pulsar_gating/: known_pulsar.rs  main.rs  shared.rs  unknown_pulsar.rs
src/src/bandscythe/: main.rs
src/src/cormerge/: main.rs
src/src/corshow/: main.rs
src/src/frinZmain/: analysis.rs  args.rs  deep_search.rs  earth_rotation_imaging.rs  fringe_rate_map.rs  header.rs  lib.rs  maser.rs  processing.rs  raw_visibility.rs  rfi.rs  uv_plot.rs
src/src/gfrinZmain/: global_ls.rs  main.rs
src/src/pulsar_gating/: main.rs  unknown_pulsar.rs
