[package]
name = "frinZ-rs"
version = "4.0.0"
edition = "2021"

[[bin]]
name = "frinZ"
path = "src/frinZmain/main.rs"

[[bin]]
name = "cormerge"
path = "src/cormerge/main.rs"

[dependencies]
chrono        = "0.4.22"
#data-encoding = "2.3.2"
#hex           = "0.4.3"
num-complex   = "0.4.2"
rustfft       = "6.1.0"
byteorder     = "1.4.3"
nalgebra = "0.33"
#lstsq = "0.5.0"
ndarray       = "0.16.1"
plotters      = "0.3.7"
#plotters-bitmap = "0.3.5"
clap          = { version = "4.4.6", features = ["derive"] }
astro         = "2.0.0"
#blh           = "0.3.0"
nav-types     = "0.5"
image = { version = "0.25.6", features = ["png"] }
imageproc     = "0.25.0"
euclid = "0.22.11"
#eframe = "0.32.0"
#egui_plot = "0.33.0"
#anyhow = "1"
terminal_size = "0.4"
rayon = "1.10"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

