[package]
name = "frinZ"
version = "4.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Masanori AKIMOTO <masanori.akimoto.ac@gmail.com>"]
description = "fringe search for Yamaguchi Interferometer and Japanese VLBI Network"
repository = "https://github.com/M-AKIMOTOO/frinZrs"
documentation = "https://docs.rs/frinZ"
readme = "README.md"    
include = ["src/frinZmain/"]

[lib]
path = "src/frinZmain/lib.rs"

[[bin]]
name = "frinZ"
path = "src/frinZmain/main.rs"

[[bin]]
name = "cormerge"
path = "src/cormerge/main.rs"

[dependencies]
chrono        = "0.4.22"
num-complex   = "0.4.2"
rustfft       = "6.1.0"
byteorder     = "1.4.3"
nalgebra = "0.33"
ndarray       = "0.16.1"
plotters      = "0.3.7"
clap          = { version = "4.4.6", features = ["derive"] }
astro         = "2.0.0"
nav-types     = "0.5"
image = { version = "0.25.6", features = ["png"] }
imageproc     = "0.25.0"
terminal_size = "0.4"
rayon = "1.10"
sys-info      = "0.9"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

