[package]
name = "frinZ"
version = "4.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Masanori AKIMOTO <masanori.akimoto.ac@gmail.com>"]
description = "fringe search for Yamaguchi Interferometer and Japanese VLBI Network"
repository = "https://github.com/M-AKIMOTOO/frinZrs"
documentation = "https://docs.rs/frinZ"
readme = "README.md"    
include = ["src/frinZmain/", "src/pulsar_gating/", "src/npyz-viewer/", "scripts/", "assets/"]

[lib]
path = "src/frinZmain/lib.rs"

[[bin]]
name = "frinZ"
path = "src/frinZmain/main.rs"

[[bin]]
name = "cormerge"
path = "src/cormerge/main.rs"

[[bin]]
name = "gfrinZ"
path = "src/gfrinZmain/main.rs"

[[bin]]
name = "corshow"
path = "src/corshow/main.rs"

[[bin]]
name = "bandscythe"
path = "src/bandscythe/main.rs"

[[bin]]
name = "pulsar_gating"
path = "src/pulsar_gating/main.rs"

[[bin]]
name = "npyz-viewer"
path = "src/npyz-viewer/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono        = "0.4.22"
num-complex   = "0.4.2"
rustfft       = "6.1.0"
byteorder     = "1.4.3"
nalgebra = "0.33"
ndarray       = "0.16.1"
plotters      = "0.3.7"
clap          = { version = "4.4.6", features = ["derive"] }
astro         = "2.0.0"
nav-types     = "0.5"
image = { version = "0.25.6", features = ["png"] }
imageproc     = "0.25.0"
imagequant = "4.4.1"
png = "0.17"
terminal_size = "0.4"
rayon = "1.10"
sys-info      = "0.9"
memmap2 = "0.9"
csv = "1.3.1"
realfft = "3.5.0"
levenberg-marquardt = "0.14"
zstd = "0.13"
tempfile = "3.13"
npyz = { version = "0.8.4", features = ["derive"] }
eframe = { version = "0.32.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
ndarray-npy = "0.9.1"
rfd = "0.15.4"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
